--- a/complete.html
+++ b/complete.html
@@ -45,7 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     
     <h1>Thank you for choosing Us.</h1>
-    <h1>Happy Travellig !!  Happy Explore !!</h1>
-    <a>cross-domain</a>
+    <h1>Happy Travelling !!  Happy Explore !!</h1>
+    <a href = "https://www.squarespace.com/">cross-domain</a>
 </body>
 </html>
