--- a/complete.html
+++ b/complete.html
@@ -46,6 +46,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     <h1>Thank you for choosing Us.</h1>
     <h1>Happy Travelling !!  Happy Explore !!</h1>
-    <a href = "https://www.squarespace.com/">cross-domain</a>
+    <a href = "https://krinamavdiya.github.io/Alter/alter.html" id ="cross" >cross-domain</a>
 </body>
 </html>
