--- a/travel.html
+++ b/travel.html
@@ -79,7 +79,7 @@ window.dataLayer.push({
           <p class="card-text">New York is a city of diversity and dynamism. 
               It is also a city of politics, economy and culture. It is even described as the economic and cultural capital of the world.
             </p>
-          <a href="places/newyork.html" class="btn btn-primary">Explore</a>
+          <a id = 'explore' href="places/newyork.html" class="btn btn-primary">Explore</a>
         </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -88,7 +88,7 @@ window.dataLayer.push({
           <h5 class="card-title">Kedarnath</h5>
           <p class="card-text">Kedarnath is a holy Hindu town located in Rudraprayag district of Uttarakhand in India. 
               It is one of the Char Dhams located in the Himalayas.</p>
-          <a href="places/kedarnath.html" class="btn btn-primary">Explore</a>
+          <a id = 'explore' href="places/kedarnath.html" class="btn btn-primary">Explore</a>
         </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -96,7 +96,7 @@ window.dataLayer.push({
         <div class="card-body">
           <h5 class="card-title">Paris</h5>
           <p class="card-text">Paris is the 'City of Light'.It is a beautiful and cultural city, very walkable, with great sights, and it has been a source of inspiration for various artists.</p>
-          <a href="places/paris.html" class="btn btn-primary">Explore</a>
+          <a id = 'explore'  href="places/paris.html" class="btn btn-primary">Explore</a>
         </div>
     </div>
 </div>
@@ -108,7 +108,7 @@ window.dataLayer.push({
           <p class="card-text">Darjeeling is a picturesque town in the Indian state of West Bengal.
               Lying amidst the slopes of the Lesser Himalayas and blanketed by emerald green plantations of tea.
             </p>
-          <a href="places/darjeeling.html" class="btn btn-primary">Explore</a>
+          <a id = 'explore'  href="places/darjeeling.html" class="btn btn-primary">Explore</a>
         </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -119,7 +119,7 @@ window.dataLayer.push({
            Has hot and humid climate, being very clean.
             It's a shopper's paradise.
           </p>
-          <a href="places/singapore.html" class="btn btn-primary">Explore</a>
+          <a id = 'explore'  href="places/singapore.html" class="btn btn-primary">Explore</a>
         </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -129,7 +129,7 @@ window.dataLayer.push({
           <p class="card-text">Dalhousie, a popular hill station in Himachal Pradesh.
             Offers an old-world charm, mesmerizing natural landscapes, pine-clad valleys and magnificent misty mountains.
             </p>
-          <a href="places/dalhousie.html" class="btn btn-primary">Explore</a>
+          <a id = 'explore'  href="places/dalhousie.html" class="btn btn-primary">Explore</a>
         </div>
     </div>
 </div>
