--- a/travel.html
+++ b/travel.html
@@ -70,6 +70,8 @@ window.dataLayer.push({
      ravelling opens new vistas of experience and understanding.People travel for different purposes. 
      Some travel for getting an education and some travel for pleasure.
 </p>
+<iframe id = youtube-video width="50%" height="315" src="https://www.youtube.com/embed/H84v3y2OaCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+    
 <h1 class="helphead">Here we are to help you choose your next destination to explore.</h1>
 <div class="carddiv">
     <div class="card" style="width: 18rem;">
