--- a/contactForm.html
+++ b/contactForm.html
@@ -33,8 +33,8 @@
         <input type="email" class="form-control" id="email" required>
       </div>
       <div class="col-md-6">
-        <label for="Password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" required>
+        <label for="Password" class="form-label">Number</label>
+        <input type="number" class="form-control" id="number" required>
       </div>
       <div class="col-12">
         <label for="Address" class="form-label">Address</label>
@@ -51,14 +51,6 @@
       <div class="col-md-2">
         <label for="Zip" class="form-label">Zip</label>
         <input type="text" class="form-control" id="zip" required>
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            Check me out
-          </label>
-        </div>
       </div>
       <div class="col-12">
         <button id="submit" type="submit" class="btn btn-primary">Submit</button>
