--- a/contactForm.html
+++ b/contactForm.html
@@ -43,8 +43,8 @@
         <input type="email" class="form-control" id="email" required>
       </div>
       <div class="col-md-6">
-        <label for="Password" class="form-label">Number</label>
-        <input type="number" class="form-control" id="number" required>
+        <label for="Number" class="form-label">Number</label>
+        <input type="tel" class="form-control" id="number" required>
       </div>
       <div class="col-12">
         <label for="Address" class="form-label">Address</label>
