--- a/contactForm.html
+++ b/contactForm.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     
-   <form id="contact_us_form" action="travel.html">
+   <form id="contact_us_form">
     <div class="row g-3">
         <div class="col">
           <label for="Firstname" class="form-label">First name</label>
