--- a/contactForm.html
+++ b/contactForm.html
@@ -30,7 +30,7 @@
     <div class="row g-3">
         <div class="col">
           <label for="Firstname" class="form-label">First name</label>
-          <input id="fname" type="text" class="form-control" required>
+          <input id="fname" type="text" class="form-control" >
         </div>
         <div class="col">
           <label for="Lastname" class="form-label">Last name</label>
@@ -40,27 +40,27 @@
       <div class="row g-3 mt-2">
       <div class="col-md-6">
         <label for="Email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" required>
+        <input type="email" class="form-control" id="email" >
       </div>
       <div class="col-md-6">
         <label for="Number" class="form-label">Number</label>
-        <input type="tel" class="form-control" id="number" required>
+        <input type="tel" class="form-control" id="number" >
       </div>
       <div class="col-12">
         <label for="Address" class="form-label">Address</label>
-        <input type="text" class="form-control" id="address" required>
+        <input type="text" class="form-control" id="address" >
       </div>
       <div class="col-md-6">
         <label for="City" class="form-label">City</label>
-        <input type="text" class="form-control" id="city" required>
+        <input type="text" class="form-control" id="city" >
       </div>
       <div class="col-md-4">
         <label for="State" class="form-label">State</label>
-        <input type="text" class="form-control" id="state" required>
+        <input type="text" class="form-control" id="state" >
       </div>
       <div class="col-md-2">
         <label for="Zip" class="form-label">Zip</label>
-        <input type="text" class="form-control" id="zip" required>
+        <input type="text" class="form-control" id="zip">
       </div>
       <div class="col-12">
         <button id="submit" type="submit" class="btn btn-primary">Submit</button>
