--- a/travel.html
+++ b/travel.html
@@ -7,6 +7,11 @@
     <meta name="facebook-domain-verification" content="mz6nfbp9gn9k0ityghpjop18g1lm84" />
     <title>Travel</title>
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MNR5F57"></script>
+
+    // statsig code
+    <script src="https://cdn.jsdelivr.net/npm/@statsig/js-client@1/build/statsig-js-client+session-replay+web-analytics.min.js?apikey=client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO">
+</script>
+
     <script>
 window.dataLayer = window.dataLayer || [];
 window.dataLayer.push({
