--- a/travel.html
+++ b/travel.html
@@ -9,9 +9,7 @@
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MNR5F57"></script>
 
     // statsig code
-    <script src="https://cdn.jsdelivr.net/npm/@statsig/js-client@1/build/statsig-js-client+session-replay+web-analytics.min.js?apikey=client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO">
-</script>
-
+    <script src="https://cdn.jsdelivr.net/npm/statsig-sidecar/dist/index.min.js?apikey=client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO"></script>
     <script>
 window.dataLayer = window.dataLayer || [];
 window.dataLayer.push({
