--- a/places/kedarnath.html
+++ b/places/kedarnath.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kedarnath</title>
     
+     //Statsig
+    <script src="https://cdn.jsdelivr.net/npm/statsig-sidecar/dist/index.min.js?apikey=client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO"></script>
+
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
