--- a/travel.html
+++ b/travel.html
@@ -12,7 +12,8 @@
     <!-- Statsig -->  
     
     <script src="https://cdn.jsdelivr.net/npm/statsig-sidecar/dist/index.min.js?apikey=client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO"></script>
-<script>
+    <script src="https://cdn.jsdelivr.net/npm/statsig-js/build/statsig-prod-web-sdk.min.js"></script>
+    <script>
 async function initializeStatsig() {
   await statsig.initialize('client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO', {
     initCompletionCallback: function (duration, success, message) {
