--- a/travel.html
+++ b/travel.html
@@ -11,9 +11,10 @@
     
     <script src="https://cdn.jsdelivr.net/npm/statsig-sidecar/dist/index.min.js?apikey=client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO"></script>
     <script src="https://cdn.jsdelivr.net/npm/statsig-js/build/statsig-prod-web-sdk.min.js"></script> 
-  <script src="https://www.unpkg.com/@statsig/statsig-js@latest/build/statsig.min.js"></script>
+ 
 
 <script>
+import { StatsigClient } from '@statsig/js-client';
 async function initializeStatsig() {
   await statsig.initialize('client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO', {
     userID: 'USER_ID', // Optional, but recommended
