--- a/complete.html
+++ b/complete.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MNR5F57"></script>
+<!-- statsig -->
+    <script src="https://cdn.jsdelivr.net/npm/statsig-js/build/statsig-prod-web-sdk.min.js"></script> 
+    <script src="https://cdn.statsig.com/v1/statsig.js">
+
+window.statsig = new Statsig("client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO");
+statsig.initialize();
+
+        
+    </script>
+
+
+
+
+    
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
