--- a/complete.html
+++ b/complete.html
@@ -7,8 +7,10 @@
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MNR5F57"></script>
 <!-- statsig -->
     <script src="https://cdn.jsdelivr.net/npm/statsig-js/build/statsig-prod-web-sdk.min.js"></script> 
-    <script src="https://cdn.statsig.com/v1/statsig.js">
-
+    <script src="https://cdn.statsig.com/v1/statsig.js">        
+    </script>
+        
+    <script>
 window.statsig = new Statsig("client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO");
 statsig.initialize();
 
