--- a/complete.html
+++ b/complete.html
@@ -11,6 +11,9 @@
     </script>
         
     <script>
+        const Statsig = require("statsig-js");
+
+
 window.statsig = new Statsig("client-A6mHBejOPhpuhBuVnUiLChF7phy5QDLC1idoN10raaO");
 statsig.initialize();
 
